--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 #h2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+netlogin.app.jwtSecret= ======================NetLogin=Spring===========================
+netlogin.app.jwtExpirationMs=86400000
+
